Fixed bug where blurring would show placeholder when there was input

--- a/sick-holder.css
+++ b/sick-holder.css
@@ -1,8 +1,8 @@
-.sickholder {
-	color: #333;
+.sick-holder {
+	color: gray;
 	cursor: text;
 	pointer-events: none;
 }
-.sickholder.focus {
-	color: gray;
+.sick-holder.focus {
+	color: #ccc;
 }
